--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,83 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Muli|Questrial|Titillium+Web');
+
+body {
+  background-color: #1c1d20;
+}
+
 .App {
   text-align: center;
+  background-color: #1c1d20;
+  color: white;
+  width: 100%;
+  height: 100%;
+  align-content: center;
+  overflow: hidden;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.MainComponent {
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+  scrollbar-color: red;
+  margin-top: 4%;
+  margin-right: 10%;
+  margin-left: 10%;
+  margin-bottom: auto;
+  align-content: center;
+  height: 75%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.DesignComponent {
+  margin: 10px;
+  padding: auto;
   display: flex;
   flex-direction: column;
+  background-color: rgb(125, 125, 128, 0.08);
+  min-width: 300px;
+  min-height: 700px;
+  vertical-align: middle;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.DesignComponent:hover {
+  background-color: rgb(125, 125, 128, 0.7);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#main-header {
+  position: sticky;
+  height: 25%;
+  position: -webkit-sticky;
+}
+
+#header-title {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 260%;
+  padding-bottom: 0px;
+  padding-top: 15px;
+  margin-bottom: 0.5px;
+}
+
+#header-subtitle {
+  font-family: 'Questrial', sans-serif;
+}
+
+#design-title {
+  font-family: 'Questrial', sans-serif;
+  font-size: 12pt;
+  margin-top: 0px;
+  padding-top: 0px;
+  vertical-align: top;
+  position: absolute;
+  top: 5%;
+}
+
+#design-logo {
+  display: inline-block;
+  vertical-align: middle;
+  position: absolute;
+  padding-bottom: auto;
+  max-width: 250px;
+  max-height: 300px;
 }
