--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@ body {
   background-color: #1c1d20;
 }
 
+p {
+  font-size: 12pt;
+}
+
 .App {
   text-align: center;
   background-color: #1c1d20;
@@ -11,6 +15,7 @@ body {
   width: 100%;
   height: 100%;
   align-content: center;
+  justify-content: center;
   overflow: hidden;
 }
 
@@ -18,7 +23,6 @@ body {
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
-  scrollbar-color: red;
   margin-top: 4%;
   margin-right: 10%;
   margin-left: 10%;
@@ -33,8 +37,8 @@ body {
   display: flex;
   flex-direction: column;
   background-color: rgb(125, 125, 128, 0.08);
-  min-width: 300px;
-  min-height: 700px;
+  min-width: 280px;
+  min-height: 520px;
   vertical-align: middle;
   align-items: center;
   justify-content: center;
@@ -45,6 +49,31 @@ body {
   background-color: rgb(125, 125, 128, 0.7);
 }
 
+.DesignStatic {
+  grid-area: "DesignStatic";
+  padding: 5px;
+  display: flex;
+  flex-direction: column;
+  vertical-align: middle;
+  align-items: center;
+  justify-content: center;
+}
+
+.DesignExpanded {
+  grid-area: "DesignExpanded";
+  margin: 50px;
+  min-width: 500px;
+  padding: auto;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(125, 125, 128, 0.08);
+  min-height: 520px;
+  vertical-align: middle;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
 #main-header {
   position: sticky;
   height: 25%;
@@ -53,7 +82,7 @@ body {
 
 #header-title {
   font-family: 'Montserrat', sans-serif;
-  font-size: 260%;
+  font-size: 270%;
   padding-bottom: 0px;
   padding-top: 15px;
   margin-bottom: 0.5px;
@@ -61,11 +90,12 @@ body {
 
 #header-subtitle {
   font-family: 'Questrial', sans-serif;
+  font-size: 12pt;
 }
 
 #design-title {
   font-family: 'Questrial', sans-serif;
-  font-size: 12pt;
+  font-size: 14pt;
   margin-top: 0px;
   padding-top: 0px;
   vertical-align: top;
@@ -78,6 +108,17 @@ body {
   vertical-align: middle;
   position: absolute;
   padding-bottom: auto;
-  max-width: 250px;
-  max-height: 300px;
+  max-width: 200px;
+  max-height: 200px;
+  align-self: center;
+}
+
+#design-text {
+  margin: 20px;
+  text-align: left;
+}
+
+#design-card {
+  max-width: 400px;
+  max-height: 400px;
 }
